--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-fixed-sidebar": "^1.1.3",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.1",
     "sass": "^1.3.0",
     "sendemail": "^3.4.0"
   },
